@@ -1,6 +1,9 @@
 apache2 (2.4.23-7) UNRELEASED; urgency=medium
 
   * Make apache2-dev depend on openssl 1.0, too. Closes: #844160
+  * Move DefaultRuntimeDir and pid file for multi-instances to
+    /var/run/apache2-xxx. Thanks to Horst Platz for the debugging.
+    Closes: #838932 LP: #1627339
   * Tweak embedded .tar.gz some more to build reproducibly.
 
  -- Stefan Fritsch <sf@debian.org>  Sun, 13 Nov 2016 11:06:36 +0100
